--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -13,6 +13,7 @@
     "@google/generative-ai": "^0.24.1",
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.10.0",
+    "dotenv": "^17.2.1",
     "emoji-picker-react": "^4.13.2",
     "moment": "^2.30.1",
     "react": "^19.1.0",
